[project]
name = "auth-n-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.0",
    "passlib>=1.7.4",
    "python-decouple>=3.8",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.24",
]
